--- a/MoaBa-iOS/MoaBa-iOS/View/Launch Screen.storyboard
+++ b/MoaBa-iOS/MoaBa-iOS/View/Launch Screen.storyboard
@@ -16,7 +16,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="X6j-xi-3c2">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AppLogo" translatesAutoresizingMaskIntoConstraints="NO" id="X6j-xi-3c2">
                                 <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                             </imageView>
                         </subviews>
@@ -37,7 +37,7 @@
     </scenes>
     <color key="tintColor" name="LightPurple"/>
     <resources>
-        <image name="Logo" width="361" height="220"/>
+        <image name="AppLogo" width="361" height="220"/>
         <namedColor name="LightPurple">
             <color red="0.90980392156862744" green="0.87058823529411766" blue="0.97254901960784312" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
